unpackaged/main/default/objects/Quote/fields/Sales_Period__c.field-meta.xml
<CustomField>
    <fullName>Sales_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Period</label>
    <referenceTo>Sales_Period__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>