unpackaged/main/default/objects/Quote/fields/SG_Payment_Link_Expiry__c.field-meta.xml
<CustomField>
    <fullName>SG_Payment_Link_Expiry__c</fullName>
    <description>Stores the expiray date for SG renewal quotes as per PGAUTO- 5138</description>
    <label>SG Payment Link Expiry</label>
    <type>DateTime</type>
</CustomField>