unpackaged/main/default/objects/Quote/fields/SO_Order__c.field-meta.xml
<CustomField>
    <fullName>SO_Order__c</fullName>
    <description>Copy from Oppty SO_Order__c</description>
    <label>SO Order#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>