unpackaged/main/default/objects/Quote/fields/Submit_to_OMC_Manually__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_OMC_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit to OMC Manually</label>
    <type>Checkbox</type>
</CustomField>