unpackaged/main/default/objects/Quote/fields/Subscription_Code__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Code__c</fullName>
    <label>Subscription Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>