unpackaged/main/default/objects/Quote/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>