unpackaged/main/default/objects/Quote/fields/Sync_To_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Sync_To_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync To NetSuite</label>
    <type>Checkbox</type>
</CustomField>