unpackaged/main/default/objects/Quote/fields/Tax_Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Reg_Number__c</fullName>
    <label>Tax Reg Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>