unpackaged/main/default/objects/Quote/fields/Team_Lead_and_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_and_Sales_Head__c</fullName>
    <formula>IF( Opportunity.Owner.Team_Lead__c == Opportunity.Owner.Sales_Head__c,TRUE,FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Lead and Sales Head</label>
    <type>Checkbox</type>
</CustomField>