unpackaged/main/default/objects/Quote/fields/to_FOC_Approval__c.field-meta.xml
<CustomField>
    <fullName>to_FOC_Approval__c</fullName>
    <formula>if(OR(AND( Country__c = &#39;Singapore&#39;,Total_Amount_of_FOC_Product__c &gt; 0),AND( Country__c = &#39;Thailand&#39;,Total_Amount_of_FOC_Product_TH__c &gt; 0), AND( Country__c = &#39;Malaysia&#39;, Total_Amount_of_FOC_Before_Discount_MY__c &gt; 0)) ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>to FOC Approval</label>
    <type>Checkbox</type>
</CustomField>