unpackaged/main/default/objects/Quote/fields/to_Managerial_Approval__c.field-meta.xml
<CustomField>
    <fullName>to_Managerial_Approval__c</fullName>
    <formula>if( Total_Disc_of_Managerial_Discount__c &gt; 0,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>to Managerial Approval</label>
    <type>Checkbox</type>
</CustomField>