unpackaged/main/default/objects/Quote/fields/to_VIP_Approval__c.field-meta.xml
<CustomField>
    <fullName>to_VIP_Approval__c</fullName>
    <formula>if(Count_of_VIP_Subscription__c &gt; 0,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>to VIP Approval</label>
    <type>Checkbox</type>
</CustomField>