unpackaged/main/default/objects/Quote/fields/Total_Amount_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Before_Discount__c</fullName>
    <inlineHelpText>(Sales Price * Qty) - Complimentary</inlineHelpText>
    <label>Total Amount Before Discount</label>
    <summarizedField>QuoteLineItem.Price_before_discount1__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>