unpackaged/main/default/objects/Quote/fields/Total_Amount_Before_Discount_display__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Before_Discount_display__c</fullName>
    <label>Total Amount Before Discount (display)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>