unpackaged/main/default/objects/Quote/fields/Total_Amount_of_FOC_Before_Discount_MY__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_FOC_Before_Discount_MY__c</fullName>
    <label>Total Amount of FOC Before Discount MY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>