unpackaged/main/default/objects/Quote/fields/Total_Amount_of_FOC_Product__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_FOC_Product__c</fullName>
    <label>Total Amount of FOC Product</label>
    <summarizedField>QuoteLineItem.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Discount_Reason__c</field>
        <operation>notEqual</operation>
        <value>VIP (Relationship), VIP (Spending), Loyalty Discount, Managerial Discount, Marketing Promo,First-Timer Discount,Agent Referral: Referee, Renewal EB Offer, Renewal EB Bonus, Cash Voucher</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.Discount_Reason__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>