unpackaged/main/default/objects/Quote/fields/Total_Amount_of_FOC_Product_TH__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_FOC_Product_TH__c</fullName>
    <label>Total Amount of FOC Product</label>
    <summarizedField>QuoteLineItem.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Discount_Reason__c</field>
        <operation>equals</operation>
        <value>Goodwill/ Relationship Building, Technical issues, Others</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.Discount_Reason__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>