unpackaged/main/default/objects/Quote/fields/Total_Complimentary_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Complimentary_Value__c</fullName>
    <label>Total Complimentary Value</label>
    <summarizedField>QuoteLineItem.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Complimentary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>