unpackaged/main/default/objects/Quote/fields/Total_Complimentary_Value_display__c.field-meta.xml
<CustomField>
    <fullName>Total_Complimentary_Value_display__c</fullName>
    <label>Total Complimentary Value (display)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>