unpackaged/main/default/objects/Quote/fields/Total_Disc_of_Managerial_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Disc_of_Managerial_Discount__c</fullName>
    <label>Total Disc of Managerial Discount</label>
    <summarizedField>QuoteLineItem.Discounted_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Discount_Reason__c</field>
        <operation>equals</operation>
        <value>Managerial Discount</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>