unpackaged/main/default/objects/Quote/fields/Total_Discounted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discounted_Amount__c</fullName>
    <label>Total Discounted Amount</label>
    <summarizedField>QuoteLineItem.Discounted_Amount__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>