unpackaged/main/default/objects/Quote/fields/Total_Discounted_Amount_display__c.field-meta.xml
<CustomField>
    <fullName>Total_Discounted_Amount_display__c</fullName>
    <label>Total Discounted Amount (display)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>