unpackaged/main/default/objects/Quote/fields/Total_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Amount__c</fullName>
    <label>Total Gross Amount</label>
    <summarizedField>QuoteLineItem.Gross_Amount__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>