unpackaged/main/default/objects/Quote/fields/Total_Mgr_Disc_of_Discretionary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Mgr_Disc_of_Discretionary_Amount__c</fullName>
    <label>Total Mgr Disc of Discretionary Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>