unpackaged/main/default/objects/Quote/fields/Total_Mgr_Disc_of_Discretionary_Percen__c.field-meta.xml
<CustomField>
    <fullName>Total_Mgr_Disc_of_Discretionary_Percen__c</fullName>
    <label>Total Mgr Disc of Discretionary Percen</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>