unpackaged/main/default/objects/Quote/fields/Total_Spending_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Total_Spending_last_12_months__c</fullName>
    <label>Total Spending (last 12 months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>