unpackaged/main/default/objects/Quote/fields/Total_Tax_Amount_display__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Amount_display__c</fullName>
    <label>Total Tax Amount (display)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>