unpackaged/main/default/objects/Quote/fields/Upgrade_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Start_Date__c</fullName>
    <formula>Opportunity.Upgrade_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upgrade Start Date</label>
    <type>Date</type>
</CustomField>