unpackaged/main/default/objects/Quote/fields/Upload_Tag__c.field-meta.xml
<CustomField>
    <fullName>Upload_Tag__c</fullName>
    <label>Upload Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>