unpackaged/main/default/objects/Quote/fields/User_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>User_Sales_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Sales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>