unpackaged/main/default/objects/Quote/fields/VIP_Approved__c.field-meta.xml
<CustomField>
    <fullName>VIP_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP Approved</label>
    <type>Checkbox</type>
</CustomField>