unpackaged/main/default/objects/Quote/validationRules/Accepted_Before_OMC_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Accepted_Before_OMC_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL( Opportunity.Opportunity_Type__c ,&#39;&#39;) ),IsChanged(Status),ISPICKVAL( Status ,&#39;Accepted&#39; ), text(Approval_Status__c)&lt;&gt; &#39;OMC Approval Approved&#39;, RecordType.DeveloperName = &#39;B2C&#39;, Opportunity.isBulkUpdate__c = false)</errorConditionFormula>
    <errorMessage>This record is not approved yet by OMC !</errorMessage>
</ValidationRule>