unpackaged/main/default/objects/Quote/validationRules/Allowed_payment_Type_Online_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Allowed_payment_Type_Online_Only</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Allowed_Payment_Type__c , &#39;Online only&#39;)</errorConditionFormula>
    <errorMessage>Can not select Online only in Allowed Payment Type for this Opportunity.</errorMessage>
</ValidationRule>