unpackaged/main/default/objects/Quote/validationRules/Lost_Reason_is_mandatory_when_Close_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Reason_is_mandatory_when_Close_Lost</fullName>
    <active>false</active>
    <description>Users required to key in lose reason when is closed lost</description>
    <errorConditionFormula>AND( 
Opportunity.IsClosed = TRUE, 
Opportunity.IsWon = FALSE, 
ISBLANK( TEXT(Loss_Reason__c ))
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please specify Loss Reason.</errorMessage>
</ValidationRule>