unpackaged/main/default/objects/Quote/validationRules/Memo_max_999.validationRule-meta.xml
<ValidationRule>
    <fullName>Memo_max_999</fullName>
    <active>true</active>
    <description>Limit Memo input to max 999 characters</description>
    <errorConditionFormula>LEN( Memo__c ) &gt; 999</errorConditionFormula>
    <errorMessage>Memo input should not exceed 999 characters. Please upload reference attachment to Files.</errorMessage>
</ValidationRule>