unpackaged/main/default/objects/Quote/validationRules/Pending_Online_Payment_to_OMC.validationRule-meta.xml
<ValidationRule>
    <fullName>Pending_Online_Payment_to_OMC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(AND( RecordType.Name = &quot;B2C&quot;,ISPICKVAL(Stage__c ,&#39;Proposal&#39;) ,
     ISPICKVAL(PRIORVALUE(Stage__c ),&quot;Pending Online Payment&quot;)), AND( RecordType.Name = &quot;B2C&quot;,ISPICKVAL(Stage__c ,&#39;New&#39;) ,
     ISPICKVAL(PRIORVALUE(Stage__c ),&quot;Pending Online Payment&quot;))),ISNULL(Invoice_Id__c))</errorConditionFormula>
    <errorMessage>Can&#39;t changed Stage to Proposal / New from Pending Online Payment</errorMessage>
</ValidationRule>