unpackaged/main/default/objects/Quote/validationRules/Quote_Need_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Need_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>And(isChanged(Status),isPickval(Status,&#39;Pending Online Payment&#39;),RecordType.DeveloperName ==&#39;B2C&#39;,or(
if(to_FOC_Approval__c,&#39;true&#39;,&#39;false&#39;)&lt;&gt;if(FOC_Approved__c,&#39;true&#39;,&#39;false&#39;) ,
if(to_Managerial_Approval__c ,&#39;true&#39;,&#39;false&#39;)&lt;&gt;if(Managerial_Approved__c,&#39;true&#39;,&#39;false&#39;)),ISNULL(Invoice_Id__c)
)</errorConditionFormula>
    <errorMessage>Your Quote Need Approval ! Please Submit Approval before change to the next stage</errorMessage>
</ValidationRule>