unpackaged/main/default/objects/Quote/validationRules/Restrict_Quote_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Quote_Record</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(PRIORVALUE(Status), &#39;Accepted&#39;),
AND(ISPICKVAL(PRIORVALUE(Status), &#39;Invalid&#39;),
IsSyncing),
AND(ISPICKVAL(PRIORVALUE(Status), &#39;Expired&#39;),
IsSyncing )),
!$Permission.System_Admin_Compliance_Access,
NOT(ISPICKVAL(Opportunity.Opportunity_Type__c,&#39;&#39;))
)</errorConditionFormula>
    <errorMessage>Can&#39;t update Quote once it is Accepted, Expired or Invalid.</errorMessage>
</ValidationRule>