unpackaged/main/default/objects/Quote/validationRules/Restrict_when_opp_stage_closed_lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_when_opp_stage_closed_lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
NOT(ISCLONE()),
ISPICKVAL(Opportunity.StageName, &#39;Closed Lost&#39;),
!$Permission.System_Admin_Compliance_Access,
NOT(ISPICKVAL(Quote_Type__c , &#39;&#39;)),
NOT(ISPICKVAL( Opportunity.Opportunity_Type__c , &#39;&#39;))
)</errorConditionFormula>
    <errorMessage>Can&#39;t update Quote when Opportunity stage is Closed Lost</errorMessage>
</ValidationRule>