unpackaged/main/default/objects/Quote/validationRules/Submit_to_OMC_Manually.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_to_OMC_Manually</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.Name = &quot;B2C&quot;, 
ISPICKVAL(Stage__c,&#39;Pending OMC Approval&#39;),Submit_to_OMC_Manually__c = true, 
NOT(ISPICKVAL(PRIORVALUE(Stage__c ),&quot;Pending OMC Approval&quot;)), ISBLANK(Invoice_Id__c))</errorConditionFormula>
    <errorMessage>Cannot change stage to &quot;Pending OMC Approval&quot; manually, Please click button Submit to OMC&quot; to send this quote to OMC</errorMessage>
</ValidationRule>