unpackaged/main/default/objects/Quote/validationRules/Validate_Agent_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Agent_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.Name=&quot;B2C&quot;,
NOT(ISBLANK(TEXT(Quote_Type__c))),
NOT(ISNULL(TEXT(Quote_Type__c))) ,
OR(
TEXT(Opportunity.Account.Status__c) = &quot;Cancelled&quot;,
TEXT(Opportunity.Account.Status__c) = &quot;Pending&quot;,
TEXT(Opportunity.Account.Status__c) = &quot;&quot;
),
ISNEW()
)</errorConditionFormula>
    <errorMessage>Can&#39;t create Quote if agent status is blank, Cancelled or Pending</errorMessage>
</ValidationRule>