unpackaged/main/default/objects/Quote/validationRules/Validate_AgentNet_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_AgentNet_Id</fullName>
    <active>false</active>
    <errorConditionFormula>AND( $RecordType.Name=&quot;B2C&quot;, ISBLANK(Opportunity.Account.AgentNet_ID__c))</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Agent&#39;s AgentNet ID is required to create/update quote</errorMessage>
</ValidationRule>