unpackaged/main/default/objects/Quote/validationRules/When_submit_OMC_check_Reprint.validationRule-meta.xml
<ValidationRule>
    <fullName>When_submit_OMC_check_Reprint</fullName>
    <active>true</active>
    <description>When stage is change to Pending OMC Approval (to submit for OMC), Re-print needs to be false. Users need to re-print before changing to stage as Pending OMC Approval.</description>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;B2B&quot;,
AND(
NOT(ISCLONE()), 
NOT(ISNEW()), 
ISPICKVAL(Opportunity.StageName,&quot;Pending OMC Approval&quot;), 
Opportunity.Re_print_Contract__c = TRUE
)
)</errorConditionFormula>
    <errorMessage>Some changes are made on the Quote which requires Re-print of Contract. Please re-print and gets client&#39;s signatory before submitting for OMC Approval.</errorMessage>
</ValidationRule>