unpackaged/main/default/objects/Quote/listViews/Pending_OMC_quotes.listView-meta.xml
<ListView>
    <fullName>Pending_OMC_quotes</fullName>
    <columns>Opp_Quote_Ref_num__c</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Quote_Type__c</columns>
    <columns>Total_Gross_Amount__c</columns>
    <columns>OMC_Urgent__c</columns>
    <columns>OMC_Submitted_Time__c</columns>
    <columns>OMC_Approved_Date__c</columns>
    <columns>OMC_Rejected_Reason__c</columns>
    <columns>Sales_Period__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Pending OMC Approval</value>
    </filters>
    <filters>
        <field>Quote_Type__c</field>
        <operation>equals</operation>
        <value>B2C - Standard,B2C - Upgrade,B2C - Renewal</value>
    </filters>
    <label>Pending OMC approval</label>
</ListView>