unpackaged/main/default/objects/Quote/listViews/SA.listView-meta.xml
<ListView>
    <fullName>SA</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>Agent_Accepted_Time__c</columns>
    <columns>Payment_Link__c</columns>
    <columns>Allowed_Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Pending Online Payment,Pending OMC Approval,Closed Won</value>
    </filters>
    <filters>
        <field>QUOTE.ISSYNCING</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SA</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>